# abb_irb_120_RLmodel

./: README.md
abb_irb_120_RL/abb_irb120_description/: CMakeLists.txt  package.xml
abb_irb_120_RL/abb_irb120_description/config/: joint_control.yaml
abb_irb_120_RL/abb_irb120_description/launch/: main.launch  move_group.launch  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  sensor_manager.launch.xml  spawn_abb_irb120.launch  trajectory_execution.launch.xml
abb_irb_120_RL/abb_irb120_description/urdf/: irb120_3_58g.urdf
abb_irb_120_RL/abb_irb120_training/: CMakeLists.txt  package.xml
abb_irb_120_RL/abb_irb120_training/config/: irb120_params.yaml
abb_irb_120_RL/abb_irb120_training/launch/: start_training.launch
abb_irb_120_RL/abb_irb120_training/scripts/: DQN.py  actor_critic.py  ddgp.py  gazebo_connection.py  irb120_env.py  irb120_env_cont.py  start_training.py
